# email-forwarder

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
src/: main.rs
