[package]
name = "email-forwarder"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
addr = "0.15.6"
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive","env"] }
ctrlc = { version = "3.4.5", features = ["termination"] }
imap = "2.4.1"
lettre = "0.11.11"
log = "0.4.25"
native-tls = "0.2.12"
simple_logger = "5.0.0"
openssl = { version = "0.10.68", features = ["vendored"] }
