[package]
name = "email-forwarder"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
addr = "0.15.6"
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive","env"] }
ctrlc = { version = "3.4.6", features = ["termination"] }
imap = "2.4.1"
lettre = "0.11.15"
log = "0.4.27"
native-tls = "0.2.14"
simple_logger = "5.0.0"
openssl = { version = "0.10.71", features = ["vendored"] }
